Fix nav components alignment.

--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -10,7 +10,6 @@
 	flex-direction: $direction;
 	flex-wrap: $wrap;
 }
-
 .d-none {
 	display: none;
 }
@@ -176,6 +175,10 @@ li:hover {
 .bell:hover {
 	animation: bellShake 0.5s;
 }
+.burger-div{
+	display: none;
+}
+
 .burger {
 	display: none;
 	width: 25px;
@@ -207,6 +210,9 @@ li:hover {
 .filter-box {
 	position: absolute;
 	top: 80px;
+}
+.search-list{
+	top: 30px;
 }
 .mobile-search {
 	position: absolute;
@@ -305,7 +311,6 @@ li:hover {
 	}
 	.browse-left-box {
 		width: 200px;
-		// border-bottom: 2px solid #fff;
 		margin-bottom: 20px;
 	}
 	.browse-left-box ul {
@@ -321,7 +326,6 @@ li:hover {
 		width: 200px;
 		padding-left: 0;
 		margin: 0;
-		// border: none;
 	}
 	.browse-right-box ul {
 		width: 100%;
@@ -330,6 +334,9 @@ li:hover {
 	}
 	.browse-menu li {
 		font-size: 16px;
+	}
+	.burger-div{
+		display: block;
 	}
 	.burger {
 		display: block;
@@ -342,6 +349,9 @@ li:hover {
 		height: 50px;
 		text-align: center;
 		font-size: 16px;
+	}
+	.search-list{
+		top: 40px;
 	}
 }
 @media (max-width: 450px) {
@@ -369,7 +379,6 @@ li:hover {
 	width: 100%;
 	max-height: 400px;
 	position: absolute;
-	top: 30px;
 	overflow-y: auto;
 	list-style: none;
 	padding: 0px 10px;
